--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,39 @@
- 
+body {
+	background: url("../images/diamond_upholstery.png");
+	font-size: 18px;
+	line-height: 34px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+} 
+
+h1 {
+	font-size: 60px;
+	color: #000080;
+	line-height: 49px;
+	border-bottom: 10px solid #B0C4DE;
+	padding-bottom: 20px;
+}
+
+.list{
+	background-color: #FAF0E6;
+	color: #000000;
+	position: relative;
+	width: 55%;
+}
+
+img {
+    position: relative;
+    width: 20%;
+}
+.score{
+	background-color: #FAF0E6;
+	color: black;
+    width: 400px;
+    height: 200px;
+    position: relative;
+}
+
+#yourScore{
+	background-color: #FAF0E6;
+	width: 200px;
+	height: 200px;
+}
